--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<div id="example">123</div>
-<!--bundle.js中生成的是很大压缩的加载了全部依赖的包  -->
+<div id="example"></div>
 <script src="./src/bundle.js"></script>  
